# PUT-flapper-drone-library

./: README.md  pyproject.toml  setup.cfg
examples/: killswitch_test.py  test_sm.py
src/: killswitch_test.py
src/flapper_pkg/cflib/bootloader/: __init__.py  cloader.py
src/flapper_pkg/cflib/crazyflie/: __init__.py  appchannel.py  commander.py  console.py  high_level_commander.py  localization.py  log.py  param.py  platformservice.py  swarm.py  syncCrazyflie.py  syncLogger.py  toc.py  toccache.py
src/flapper_pkg/cflib/crazyflie/mem/: __init__.py  deck_memory.py  i2c_element.py  led_driver_memory.py  led_timings_driver_memory.py  lighthouse_memory.py  loco_memory.py  loco_memory_2.py  memory_tester.py  ow_element.py  trajectory_memory.py
src/flapper_pkg/cflib/crtp/: __init__.py  cflinkcppdriver.py  prrtdriver.py  radiodriver.py  serialdriver.py  udpdriver.py  usbdriver.py
src/flapper_pkg/cflib/localization/: lighthouse_config_manager.py  lighthouse_sweep_angle_reader.py
src/flapper_pkg/cflib/positioning/: motion_commander.py  position_hl_commander.py
src/flapper_pkg/cflib/utils/: multiranger.py  power_switch.py
src/flapper_pkg/optitrack/: mapi.cpp
src/flapper_pkg/state_machine/: flapper.py  from_tos.yaml  generator.py
src/flapper_pkg/utils/: killswitch_test.py  test.py
src/state_machine/: console.py  flapper.py  from_tos.yaml  options.yaml
