[metadata]
name = flapper_pkg
version = 0.0.1
author = Patryk Gawron Klaudia Sagat Michal Heit
author-email = patryk.gawron@student.put.poznan.pl
description = Flapper lib that connect optitrack and cflib and statemachine
long_description  = file: README.md

classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
install_requires =
    matplotlib
    networkx
    pyusb>=1.0.0b2
    opencv-python-headless==4.5.1.48
    cflinkcpp
    serial-tool
    python-statemachine
    pyyaml
    mock
    coverage
    tox
    pre-commit

include_package_data = True
package_dir = 
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
* = statemachine/*.yaml

[options.extras_require]
testing = pytest>=6.2.4
          pytest-cov